[package]
name = "homeserver-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
local-ip-address = "0.5.3"
nixinfo = "0.3.3"
serenity = {version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.29.1", features = ["macros", "rt-multi-thread"]}
